<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tts">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/mic_hint"/>


    <RadioGroup android:id="@+id/numbers"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <!--
        <RadioButton android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero" 
            android:textSize="22pt"/>
        -->
        <RadioButton android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one" />
        <RadioButton android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two" />
        <RadioButton android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three" />
        <RadioButton android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four" />
        <RadioButton android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five" />
        <!--    
        <RadioButton android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six" 
            android:textSize="22pt"/>    
        <RadioButton android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven" 
            android:textSize="22pt"/> 
        <RadioButton android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight" 
            android:textSize="22pt"/> 
        <RadioButton android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine" 
            android:textSize="22pt"/>  
        -->               
        <RadioButton android:id="@+id/mic_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mic_fail" />        
    </RadioGroup>

</LinearLayout>
